--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   font-family: Etihad_font,
     sans-serif;
+    color: #001838;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
