--- a/src/Components/Page/Login/Login.css
+++ b/src/Components/Page/Login/Login.css
@@ -98,6 +98,7 @@
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+    background-color: transparent;
 }
 .container {
     box-sizing: border-box;
